# Currency_Rates_App

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile.dev  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  entities.py  logging.py  value_objects.py
backend/app/db/: models.py
backend/migrations/: env.py
backend/migrations/versions/: 14031c24c423_create_initial_tables.py
backend/scripts/: seed_data.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_entities.py  test_logging.py  test_main.py  test_value_objects.py
docs/: domain-model-uml.md  requirements-files.md  requirements.md
docs/adr/: 001-architecture-decision-record.md
frontend/: .eslintrc.cjs  Dockerfile.dev  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.test.tsx
tests/: test_config.py  test_logging.py
